--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           node-version: 20
           cache: 'yarn'
+          cache-dependency-path: './gui/yarn.lock'
       - name: Install dependencies
         run: cd gui && yarn install
       - name: Build
